--- a/src/client/app/language-selector/language-selector.component.html
+++ b/src/client/app/language-selector/language-selector.component.html
@@ -1,8 +1,8 @@
-<label for="language_selector" translate>
-  Language
+<label for="language_selector">
+  {{ 'Language' | translate }}
 </label>
 <select id="language_selector" #selectLang (change)="languageChanged(selectLang.value)">
-  <option *ngFor="let language of availableLanguages$ | async" translate [value]="language" [selected]="currentLanguage === language">
-    preferences.language.{{ language }}
+  <option *ngFor="let language of availableLanguages$ | async" [value]="language" [selected]="currentLanguage === language">
+    {{ 'preferences.language.' + language | translate }}
   </option>
 </select>
