--- a/src/client/app/header/header.component.html
+++ b/src/client/app/header/header.component.html
@@ -1,4 +1,8 @@
-<mat-toolbar>
+<mat-toolbar color="primary">
+  <mat-icon svgIcon="icon-dice"></mat-icon>
   <span>Board Games</span>
-  <span>{{ 'Hello' | translate }}</span>
+  <span></span>
+  <button mat-icon-button>
+    <mat-icon svgIcon="icon-more-button"></mat-icon>
+  </button>
 </mat-toolbar>
