--- a/src/client/app/header/header.component.html
+++ b/src/client/app/header/header.component.html
@@ -1,6 +1,17 @@
 <mat-toolbar color="primary" class="header">
   <mat-icon svgIcon="icon-dice" class="header__brand-logo"></mat-icon>
   <span class="header__brand-name">Board Games</span>
+  <nav>
+    <a class="header__navigation-link" routerLink="home" routerLinkActive="header__navigation-link--active">
+      {{ 'Home' | translate }}
+    </a>
+    <a class="header__navigation-link" routerLink="games" routerLinkActive="header__navigation-link--active">
+      {{ 'Games' | translate }}
+    </a>
+    <a class="header__navigation-link" routerLink="about" routerLinkActive="header__navigation-link--active">
+      {{ 'About' | translate }}
+    </a>
+  </nav>
   <span fxFlex></span>
   <button mat-button (click)="openUserSettingsDialog()">
     <mat-icon class="header__user-icon" svgIcon="icon-user"></mat-icon>
