--- a/src/client/app/home/home.component.html
+++ b/src/client/app/home/home.component.html
@@ -1,5 +1,12 @@
 <div class="home__container">
-  <p>
-    home works!
-  </p>
+  <h1>{{ 'Welcome to Board Games' | translate }}</h1>
+  <p>{{ 'Board games introduction' | translate }}</p>
+  <img src="assets/images/board-games.jpg" alt="Board games">
+
+  <h1>{{ 'How to start' | translate }}</h1>
+  <ol>
+    <li>{{ 'Update your player name' | translate }}</li>
+    <li>{{ 'Find a game or create a new one' | translate }}</li>
+    <li>{{ 'Invite your friends to play with you or fight against the AI' | translate }}</li>
+  </ol>
 </div>
