Update about page

--- a/src/client/app/about/about.component.scss
+++ b/src/client/app/about/about.component.scss
@@ -1,5 +1,28 @@
 @import '../../css/mixins';
 
+$about-contact-item-line-height: 40px;
+$about-contact-item-icon-top: 5px;
+$about-contact-item-name-margin-left: 30px;
+
 .about__container {
   @include setFixedWidth;
+}
+
+.about__list {
+  list-style: none;
+  line-height: $about-contact-item-line-height;
+}
+
+.about__list-item {
+  position: relative;
+}
+
+.about__list-item-icon {
+  position: absolute;
+  top: $about-contact-item-icon-top;
+}
+
+.about__list-item-name {
+  text-decoration: none;
+  margin-left: $about-contact-item-name-margin-left;
 }
