--- a/src/client/app/header/header.component.html
+++ b/src/client/app/header/header.component.html
@@ -11,7 +11,7 @@
       {{ 'Games' | translate }}
     </a>
     <a mat-button class="header__navigation-link" routerLink="/about" routerLinkActive="header__navigation-link--active">
-      {{ 'About' | translate }}
+      {{ 'About us' | translate }}
     </a>
     <span fxFlex></span>
     <button mat-button (click)="openUserSettingsDialog()">
