--- a/src/client/app/about/about.component.html
+++ b/src/client/app/about/about.component.html
@@ -1,5 +1,19 @@
 <div class="about__container">
-  <p>
-    about works!
-  </p>
+  <h1>{{ 'About us' | translate }}</h1>
+  <p>{{ 'This is onesource' | translate }}</p>
+  <p>{{ 'Feel free to contact us' | translate }}</p>
+  <ul class="about__list">
+    <li class="about__list-item">
+      <mat-icon class="about__list-item-icon" svgIcon="icon-github"></mat-icon>
+      <a class="about__list-item-name" href="https://github.com/pbazurin/board-games" target="_blank">https://github.com/pbazurin/board-games</a>
+    </li>
+    <li class="about__list-item">
+      <mat-icon class="about__list-item-icon" svgIcon="icon-skype"></mat-icon>
+      <span class="about__list-item-name">boltik-61</span>
+    </li>
+    <li class="about__list-item">
+      <mat-icon class="about__list-item-icon" svgIcon="icon-mail"></mat-icon>
+      <a class="about__list-item-name" href="mailto:petr.bazurin@gmail.com">petr.bazurin@gmail.com</a>
+    </li>
+  </ul>
 </div>
