Add some initial models and first api call

--- a/src/client/app/games/games.component.html
+++ b/src/client/app/games/games.component.html
@@ -2,11 +2,11 @@
   <h1>{{ 'Running games list' | translate }}</h1>
   <button mat-flat-button color="primary" (click)="openStartNewGameDialog()">{{ 'Start a new game' | translate }}</button>
   <mat-list>
-    <mat-list-item *ngFor="let item of []">
-      <mat-icon mat-list-icon>folder</mat-icon>
-      <h4 mat-line>{{ item }}</h4>
-      <p mat-line> {{ item }}</p>
+    <mat-list-item *ngFor="let game of games" fxLayout>
+      <div>{{ game.id }}</div>
+      <div>{{ game.type }}</div>
+      <div>{{ game.players.length }}</div>
     </mat-list-item>
-    <span>{{ 'No running games' | translate }}</span>
+    <span *ngIf="!games.length">{{ 'No running games' | translate }}</span>
   </mat-list>
 </div>
