--- a/src/client/app/games/games.component.html
+++ b/src/client/app/games/games.component.html
@@ -2,10 +2,11 @@
   <h1>{{ 'Running games list' | translate }}</h1>
   <button mat-flat-button color="primary" (click)="openStartNewGameDialog()">{{ 'Start a new game' | translate }}</button>
   <mat-list>
-    <mat-list-item *ngFor="let game of games" fxLayout>
-      <div>{{ game.id }}</div>
-      <div>{{ game.type }}</div>
-      <div>{{ game.players.length }}</div>
+    <mat-list-item *ngFor="let game of games">
+      <div fxFlex>{{ game.id }}</div>
+      <div fxFlex>{{ game.type }}</div>
+      <div fxFlex>{{ game.players.length }} player(s)</div>
+      <div fxFlex>{{ game.createdOn | date }}</div>
     </mat-list-item>
     <span *ngIf="!games.length">{{ 'No running games' | translate }}</span>
   </mat-list>
