Add ability to add new game

--- a/src/client/app/games/dialog-new-game/dialog-new-game.component.html
+++ b/src/client/app/games/dialog-new-game/dialog-new-game.component.html
@@ -11,6 +11,6 @@
   </mat-dialog-content>
   <mat-dialog-actions fxLayoutAlign="end">
     <button type="button" mat-button mat-dialog-close>{{ 'Cancel' | translate }}</button>
-    <button type="submit" mat-button color="primary">{{ 'Save' | translate }}</button>
+    <button type="submit" mat-button color="primary">{{ 'Start' | translate }}</button>
   </mat-dialog-actions>
 </form>
