Rename secret word to password

--- a/src/client/app/header/dialog-user-settings/dialog-user-settings.component.html
+++ b/src/client/app/header/dialog-user-settings/dialog-user-settings.component.html
@@ -5,14 +5,14 @@
       <input required matInput name="name" placeholder="{{ 'Name' | translate }}" [(ngModel)]="settings.name">
     </mat-form-field>
     <mat-form-field fxFill>
+      <input required matInput name="password" placeholder="{{ 'Password' | translate }}" [(ngModel)]="settings.password">
+    </mat-form-field>
+    <mat-form-field fxFill>
       <mat-select required name="language" placeholder="{{ 'Language' | translate }}" [(ngModel)]="settings.language">
         <mat-option *ngFor="let language of settings.availableLanguages" [value]="language">
           {{ languageNames[language] }}
         </mat-option>
       </mat-select>
-    </mat-form-field>
-    <mat-form-field fxFill>
-      <input required matInput name="secret" placeholder="{{ 'Secret word' | translate }}" [(ngModel)]="settings.secret">
     </mat-form-field>
   </mat-dialog-content>
   <mat-dialog-actions fxLayoutAlign="end">
