Add join and leave game

--- a/src/client/app/games/list-games/list-games.component.html
+++ b/src/client/app/games/list-games/list-games.component.html
@@ -2,8 +2,8 @@
   <mat-spinner class="list__spinner" *ngIf="!games.length && isLoading"></mat-spinner>
   <mat-list-item *ngFor="let game of games">
     <div fxFlex>{{ game.type | translate }}</div>
-    <div fxFlex>{{ game.authorPlayerId }} author</div>
-    <div fxFlex>{{ game.playerIds.length }} player(s)</div>
+    <div fxFlex>{{ game.authorUserId }} author</div>
+    <div fxFlex>{{ game.userIds.length }} player(s)</div>
     <div fxFlex>Created {{ game.createdOn | date }}</div>
     <button mat-button color="primary" (click)="joinGame(game.id)">{{ 'Join' | translate }}</button>
   </mat-list-item>
