Update error handling

--- a/src/client/app/games/games.component.html
+++ b/src/client/app/games/games.component.html
@@ -1,5 +1,5 @@
 <div class="games__container">
   <h1>{{ 'Running games list' | translate }}</h1>
-  <button mat-flat-button color="primary" (click)="openStartNewGameDialog()">{{ 'Start a new game' | translate }}</button>
+  <button mat-flat-button color="primary" (click)="openStartNewGameDialog()">{{ 'Start new game' | translate }}</button>
   <bg-list-games></bg-list-games>
 </div>
