--- a/src/client/app/games/dialog-new-game/dialog-new-game.component.html
+++ b/src/client/app/games/dialog-new-game/dialog-new-game.component.html
@@ -1,5 +1,5 @@
 <form (ngSubmit)="onSubmit()">
-  <h2 mat-dialog-title>{{ 'Start a new game' | translate }}</h2>
+  <h2 mat-dialog-title>{{ 'Start new game' | translate }}</h2>
   <mat-dialog-content>
     <mat-form-field fxFill>
       <mat-select required name="gameType" placeholder="{{ 'Game type' | translate }}" [(ngModel)]="selectedGameType">
