Update games layout

--- a/src/client/app/games/game-munchkin/game-munchkin.component.html
+++ b/src/client/app/games/game-munchkin/game-munchkin.component.html
@@ -1,1 +1,2 @@
-<h1>Hello from the Munchkin game {{ gameId }}</h1>
+<bg-munchkin-players fxFlex="250px"></bg-munchkin-players>
+<bg-munchkin-board fxFlex></bg-munchkin-board>
