--- a/src/client/app/games/game-test/game-test.component.html
+++ b/src/client/app/games/game-test/game-test.component.html
@@ -1,1 +1,2 @@
-<h1>Hello from the test game {{ gameId }}</h1>
+<bg-test-players fxFlex="250px"></bg-test-players>
+<bg-test-board fxFlex></bg-test-board>
