Add initial chat component

--- a/src/client/app/games/game-test/game-test.component.html
+++ b/src/client/app/games/game-test/game-test.component.html
@@ -1,2 +1,5 @@
 <bg-test-players fxFlex="250px"></bg-test-players>
-<bg-test-board fxFlex></bg-test-board>
+<div fxFlex fxLayout="column">
+  <bg-test-board fxFlex></bg-test-board>
+  <bg-chat fxFlex="0 0 300px"></bg-chat>
+</div>
