--- a/src/client/app/games/game-munchkin/game-munchkin.component.html
+++ b/src/client/app/games/game-munchkin/game-munchkin.component.html
@@ -1,2 +1,5 @@
 <bg-munchkin-players fxFlex="250px"></bg-munchkin-players>
-<bg-munchkin-board fxFlex></bg-munchkin-board>
+<div fxFlex fxLayout="column">
+  <bg-munchkin-board fxFlex></bg-munchkin-board>
+  <bg-chat fxFlex="0 0 300px"></bg-chat>
+</div>
