--- a/src/client/app/header/dialog-about/dialog-about.component.html
+++ b/src/client/app/header/dialog-about/dialog-about.component.html
@@ -5,7 +5,12 @@
   <ul class="about__list">
     <li class="about__list-item">
       <mat-icon class="about__list-item-icon" svgIcon="icon-github"></mat-icon>
-      <a class="about__list-item-name" href="https://github.com/pbazurin/board-games" target="_blank">https://github.com/pbazurin/board-games</a>
+      <a
+        class="about__list-item-name"
+        href="https://github.com/pbazurin/board-games"
+        target="_blank"
+        >https://github.com/pbazurin/board-games</a
+      >
     </li>
     <li class="about__list-item">
       <mat-icon class="about__list-item-icon" svgIcon="icon-skype"></mat-icon>
@@ -13,10 +18,14 @@
     </li>
     <li class="about__list-item">
       <mat-icon class="about__list-item-icon" svgIcon="icon-mail"></mat-icon>
-      <a class="about__list-item-name" href="mailto:petr.bazurin@gmail.com">petr.bazurin@gmail.com</a>
+      <a class="about__list-item-name" href="mailto:petr.bazurin@gmail.com"
+        >petr.bazurin@gmail.com</a
+      >
     </li>
   </ul>
 </mat-dialog-content>
 <mat-dialog-actions fxLayoutAlign="end">
-  <button type="button" mat-button mat-dialog-close>{{ 'Close' | translate }}</button>
+  <button type="button" mat-button mat-dialog-close>
+    {{ 'Close' | translate }}
+  </button>
 </mat-dialog-actions>
