--- a/src/client/app/home/home.component.html
+++ b/src/client/app/home/home.component.html
@@ -1,12 +1,17 @@
 <div class="home__container">
   <h1>{{ 'Welcome to Board Games' | translate }}</h1>
   <p>{{ 'Board games introduction' | translate }}</p>
-  <img src="assets/images/board-games.jpg" alt="Board games">
+  <img src="assets/images/board-games.jpg" alt="Board games" />
 
   <h1>{{ 'How to start' | translate }}</h1>
   <ol>
     <li>{{ 'Update your player name' | translate }}</li>
     <li>{{ 'Find a game or create a new one' | translate }}</li>
-    <li>{{ 'Invite your friends to play with you or fight against the AI' | translate }}</li>
+    <li>
+      {{
+        'Invite your friends to play with you or fight against the AI'
+          | translate
+      }}
+    </li>
   </ol>
 </div>
