--- a/src/client/app/games/games.component.html
+++ b/src/client/app/games/games.component.html
@@ -3,5 +3,5 @@
   <button mat-flat-button color="primary" (click)="openStartNewGameDialog()">
     {{ 'Start new game' | translate }}
   </button>
-  <bg-list-games></bg-list-games>
+  <bg-list-games class="games__list"></bg-list-games>
 </div>
