Customize munchkin game and players

--- a/src/client/app/games/game-munchkin/game-munchkin.component.html
+++ b/src/client/app/games/game-munchkin/game-munchkin.component.html
@@ -1,4 +1,8 @@
-<bg-munchkin-players fxFlex="250px"></bg-munchkin-players>
+<bg-munchkin-players
+  fxFlex="250px"
+  [players]="game && game.players"
+  [myUserId]="myUserId"
+></bg-munchkin-players>
 <div fxFlex fxLayout="column">
   <bg-munchkin-board fxFlex></bg-munchkin-board>
   <bg-chat fxFlex="0 0 300px"></bg-chat>
